--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
           <p
             class="text-lg sm:text-xl text-gray-600 dark:text-gray-400 max-w-2xl mx-auto mb-12"
           >
-            Crafting beautiful, responsive web experiences with React,
-            JavaScript &amp; modern web technologies
+           Designing and developing responsive web applications with React &amp; modern JavaScript
           </p>
 
           <!-- Social Links -->
