Update GitHub link in index.html

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
               </svg>
             </a>
             <a
-              href="https://github.com/dmr565"
+              href="https://github.com/denofdhamodhar?tab=repositories"
               target="_blank"
               class="group p-4 rounded-full bg-white/50 dark:bg-slate-800/50 backdrop-blur-lg border border-gray-200 dark:border-slate-700 hover:bg-white dark:hover:bg-slate-700 hover:scale-110 transition-all duration-300 shadow-lg hover:shadow-xl"
             >
